k8s/secret-forest/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-forest
spec:
  rules:
    - http:
        paths:
          - path: /reservations/
            pathType: Prefix
            backend:
              service:
                name: reservations
                port:
                  number: 3004
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
